whitespace fixes (now uses tabs) + little polish
People generally prefer to use tabs because they can set the width of
them in the editor. Myself, I usually use 2-spaces but I'll try to
remember to run spaces-to-tabs before I commit. Cuz I just loaded this
up in an IDE with 4-space tabs and it was a mess.

--- a/resources/style.css
+++ b/resources/style.css
@@ -103,10 +103,12 @@ body { /*every page*/
   text-align:center;
   
   border-radius:4px;
-  transition:background 0.1s ease-out, width 0.2s ease-in-out;
+  transition:background 0.1s ease-out, width 0.2s ease-in-out, box-shadow 0.2s ease-in-out 0.2s;
+  box-shadow: 0px 0px 0px rgba(49,158,122,0.5);
 }
 .cta-button:hover {
   background:#319E7A;
+  box-shadow: 0px 10px rgba(49,158,122,0.5);
 }
 
 .cta-trynow {
@@ -123,7 +125,6 @@ body { /*every page*/
   display: flex;
   flex-direction: column;
 }
-
 .cta-trynow:hover {
   width: 55%;
 }
@@ -166,7 +167,7 @@ body { /*every page*/
 }
 
 .imageFade.butOnlySorta { /* ;) */
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.1);
 }
 
 .sectionHeader {
@@ -205,18 +206,21 @@ body { /*every page*/
   position: absolute;
   left: 0px;
   top: 0px;
+  
+  border-radius: 5px;
+  box-shadow: 0px 10px rgba(0,0,0,0.3);
 }
 
 .showcase-callout {
   z-index: 88888;
-  color: #313131;
+  color: white;
   position: absolute;
   height: 35px;
   box-sizing: border-box;
   font-weight: bold;
-  padding: 8px;
+  padding: 8px 30px;
   border-radius: 500px;
-  background-color: rgba(66,186,146,0.8);
+  background-color: rgb(66,186,146);
 }
 
 .showcase-callout:after {
@@ -224,8 +228,8 @@ body { /*every page*/
   display: block;
   width: 0px;
   height: 0px;
-  border-left: 10px solid rgba(66,186,146,0.8);
-  border-top: 10px solid rgba(66,186,146,0.8);
+  border-left: 10px solid rgb(66,186,146);
+  border-top: 10px solid rgb(66,186,146);
   border-right: 10px solid transparent;
   border-bottom: 10px solid transparent;
   transform: translate(20px,-37px) rotate(45deg);
@@ -296,8 +300,8 @@ body { /*every page*/
   transition: height 0.3s ease-in-out, border 0.3s ease-in-out, top 0.3s ease-in-out;
 }
 .footerLink:hover:before {
-  height: 100%;
-  top: 0%;
+  height: 90%;
+  top: 5%;
   border-color: #1F8C68;
   
   transition: height 0.3s ease-in-out, border 0.3s ease-in-out, top 0.3s ease-in-out;
